--- a/club.css
+++ b/club.css
@@ -1,10 +1,99 @@
 /*　ヘッダー*/
 
 /*ヒーローみたいな*/
+.hero {
+    background-image: url();
+    background-size: cover;
+    width: 1440px;
+    height: 200px;
+    background-color: coral;
+}
 
-/*紹介文*/
+.hero_title {
+    position: absolute;
+    top: 5%;
+    left: 45%;
+}
+
+.hero_label {
+    font-family: 'Montserrat';
+    font-style: italic;
+    color: #fff;
+    font-weight: 600;
+    font-size: 48px;
+    line-height: 150%;
+}
+
+.hero_inline {
+    font-family: 'Noto Sans JP';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 150%;
+}
+
+
+/* メイン全体 */
+.main {
+    background-color: #d9d9d9;
+    width: 100%;
+}
 
 /*バスケ*/
+.pro {
+    background-color: #fff;
+}
+section {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: aqua;
+}
+.club_basket {
+    width: 60%;
+    /* height: 320px; */
+    left: 26px;
+    top: 39px;
+    display: flex;
+}
+
+.club_img {
+    background-color: #EDEDED;
+}
+
+.club_1 {
+    display: flex;
+}
+.de {
+    font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 29px;
+align-items: center;
+}
+.name {
+    font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 29px;
+display: flex;
+align-items: center;
+text-align: center;
+}
+
+.club_button{
+    font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 16px;
+line-height: 19px;
+display: flex;
+align-items: center;
+text-align: center;
+padding-left: 25%;
+}
 
 /*自炊*/
 
