--- a/css/toppage.css
+++ b/css/toppage.css
@@ -4,7 +4,7 @@
 }
 
 main {
-  background-color: #F5F5F5;
+  background: #D9D9D9;;
 
 }
 
@@ -33,7 +33,7 @@ text-align: center;
 
 .btn_01 {
   margin: 0px 30px 20px 30px;
-  background: #FFFFFF;
+  background: #7BDCB5;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   font-family: 'Inter';
   font-style: normal;
