--- a/css/toppage.css
+++ b/css/toppage.css
@@ -1,5 +1,5 @@
 /*ヘッダー適応のcss*/
-.header{
+.header {
   height: 240px;
 }
 
@@ -7,10 +7,16 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Kosugi Maru', sans-serif;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 
+
+
+
 main {
-  background: #D9D9D9;;
+  background: #D9D9D9;
+  ;
 
 }
 
@@ -25,10 +31,11 @@ main {
 
 .bottons {
   /*  margin: 30px; */
-text-align: center;
-display: flex;
-/* width: 80%;
- */}
+  text-align: center;
+  display: flex;
+  /* width: 80%;
+ */
+}
 
 @media screen and (max-width: 768px) {
 
@@ -37,20 +44,24 @@ display: flex;
     display: block;
   }
 }
+
 @media screen and (max-width: 768px) {
 
-  .bottons{
+  .bottons {
     display: block;
-    
+
   }
 }
 
+.btn_text::before{
+  font-family: "material-symbols-outlined";
+  content: e5e1;
+}
 
 .btn_01 {
   margin: 0px 30px 20px 30px;
-  background: #7BDCB5;
+  background: #b6c9f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  font-family: 'Inter';
   font-style: normal;
   font-weight: 700;
   font-size: 24px;
@@ -60,10 +71,12 @@ display: flex;
   color: #000000;
   padding: 20px;
   white-space: nowrap;
-display: inline-block;
-width: 30%;
+  display: inline-block;
+  width: 30%;
+  border-radius: 20px;
 }
-.btn_01 span{
+
+.btn_01 span {
   display: flex;
   justify-content: center;
 }
@@ -72,9 +85,8 @@ width: 30%;
 @media screen and (max-width: 768px) {
   .btn_01 {
     margin: 0px 30px 20px 30px;
-    background: #7BDCB5;
+    background: #b6c9f3;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
@@ -86,8 +98,8 @@ width: 30%;
     white-space: nowrap;
     display: block;
     margin-right: auto;
-  margin-left: auto;
-  width:80%;
+    margin-left: auto;
+    width: 80%;
   }
 }
 
@@ -205,7 +217,6 @@ p {
 
   text-align: center;
   padding: 20px;
-  font-family: 'Inter';
   font-style: normal;
   font-weight: 700;
   font-size: 24px;
@@ -215,8 +226,9 @@ p {
 }
 
 h2 span {
-  background-color: #ffffff;
+  background-color: #deeafc;
   padding: 20px;
+  border-radius: 20px;
 }
 
 ul {
@@ -258,9 +270,9 @@ a:active {
 
 @media screen and (max-width: 768px) {
 
-  .cp_container{
+  .cp_container {
     display: block;
-    
+
   }
 }
 
@@ -281,10 +293,10 @@ a:active {
 
 .intro_contents {
   padding: 5%;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 
-.club_2 table{
+.club_2 table {
   border-spacing: 10px;
 }
 
@@ -322,13 +334,12 @@ a:active {
   bottom: 20px;
   left: 50%;
   width: 16rem;
-  font-family: FontAwesome;
   content: ' 続きをよむ';
   transform: translate(-50%, 0);
   letter-spacing: 0.05em;
   color: #ffffff;
   border-radius: 20px;
-  background-color: #D9D9D9;
+  background-color: #b6c9f3;
 }
 
 .cp_box input {
@@ -347,7 +358,6 @@ a:active {
  } */
 
 .cp_box input:checked+label:after {
-  font-family: FontAwesome;
   content: ' 閉じる';
 }
 
