--- a/css/club.css
+++ b/css/club.css
@@ -1,3 +1,10 @@
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Kosugi Maru', sans-serif;
+    font-family: 'M PLUS Rounded 1c', sans-serif;
+}
+
 /*　ヘッダー*/
 
 /*ヒーローみたいな*/
@@ -16,7 +23,6 @@
 }
 
 .hero_label {
-    font-family: 'Montserrat';
     font-style: italic;
     color: #fff;
     font-weight: 600;
@@ -38,6 +44,7 @@
     background-color: #d9d9d9;
     width: 100%;
 }
+
 .club_itiran {
     background-color: #7BDCB5;
     width: 13%;
@@ -45,17 +52,17 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     margin-left: 35%;
 }
+
 .itiran {
-font-family: 'Inter';
-font-style: normal;
-font-weight: 700;
-font-size: 20px;
-line-height: 29px;
-display: flex;
-align-items: center;
-text-align: center;
-padding: 10%;
-padding-left: 25%;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 29px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    padding: 10%;
+    padding-left: 25%;
 }
 
 /*バスケ*/
@@ -65,12 +72,14 @@ padding-left: 25%;
     /* height: 320px; */
     padding: 20px;
 }
+
 section {
     width: 100%;
     display: flex;
     justify-content: center;
     margin-top: 5%;
 }
+
 .club_basket {
     width: 40%;
     /* height: 320px; */
@@ -86,57 +95,56 @@ section {
 }
 
 .club_1 {
-    display: flex;  
+    display: flex;
     gap: 150px;
 }
+
 .club_2 {
-    font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 15px;
-line-height: 29px;
-display: flex;
-align-items: center;
-text-align: center;
-padding-left: 80px;
-padding-top: 20px;
-padding-bottom: 20px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 29px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    padding-left: 80px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
+
 .de {
-    font-family: 'Inter';
-font-style: normal;
-font-weight: 700;
-font-size: 15px;
-line-height: 20px;
-align-items: center;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 20px;
+    align-items: center;
 }
+
 .name {
-    font-family: 'Inter';
-font-style: normal;
-font-weight: 700;
-font-size: 15px;
-line-height: 29px;
-display: flex;
-align-items: center;
-text-align: center;
-padding-left: 40px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 29px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    padding-left: 40px;
 }
 
 
-.club_button{
-font-family: 'Inter';
-font-style: normal;
-font-weight: 700;
-font-size: 13px;
-line-height: 19px;
-display: flex;
-padding: 5%;
-background-color: #d9d9d9;
-width: 40%;
-justify-content: center;
-border-radius: 30px;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-align-items: center;
+.club_button {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 13px;
+    line-height: 19px;
+    display: flex;
+    padding: 5%;
+    background-color: #d9d9d9;
+    width: 40%;
+    justify-content: center;
+    border-radius: 30px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    align-items: center;
 }
 
 /*自炊*/
