--- a/css/survey.css
+++ b/css/survey.css
@@ -1,3 +1,10 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Kosugi Maru', sans-serif;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
+}
+
 body,
 html {
   margin: 0;
@@ -54,12 +61,12 @@ h2 span {
 }
 
 .survey_title_icon {
-  background: #ccc;
+  background: #b6c9f3;
   width: 30%;
 }
 
 .survey_title_content {
-  background: #fff;
+  background: #ffffff;
   padding: 24px;
   width: 100%;
 }
@@ -91,7 +98,7 @@ h2 span {
 }
 
 .survey_label {
-  background: #ccc;
+  background: #b6c9f3;
   width: 30%;
   display: flex;
   justify-content: center;
@@ -124,7 +131,7 @@ h2 span {
 
 .submit {
   min-width: 200px;
-  border: 1px solid #ccc;
+  border: 1px solid #025d8e;
   border-radius: 50px;
   padding: 10px;
   box-shadow: 2px 5px 15px -7px rgba(0, 0, 0, 0.6);
@@ -173,7 +180,6 @@ ul.ks-cboxtags li label::before {
   font-variant: normal;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
-  font-family: "Font Awesome 5 Free";
   font-weight: 900;
   font-size: 12px;
   padding: 2px 6px 2px 2px;
@@ -197,9 +203,9 @@ ul.ks-cboxtags li input[type="checkbox"]:checked+label::before {
 }
 
 ul.ks-cboxtags li input[type="checkbox"]:checked+label {
-  border: 2px solid #1bdbf8;
-  background-color: #12bbd4;
-  color: #fff;
+  border: 2px solid #025d8e;
+  background-color: #deeafc;
+  color: #025d8e;
   transition: all .2s;
 }
 
@@ -213,7 +219,7 @@ ul.ks-cboxtags li input[type="checkbox"] {
 }
 
 ul.ks-cboxtags li input[type="checkbox"]:focus+label {
-  border: 2px solid #e9a1ff;
+  border: 2px solid #025d8e;
 }
 
 /* モーダル作成 */
@@ -237,7 +243,7 @@ ul.ks-cboxtags li input[type="checkbox"]:focus+label {
 .modal_content {
   height: 60%;
   width: 60%;
-  background: #e9a1ff;
+  background: #deeafc;
   position: relative;
   padding: 30px;
   border-radius: 20px;
