--- a/css/status.css
+++ b/css/status.css
@@ -67,6 +67,16 @@ p {
   margin-top: 30px;
   margin-bottom: 30px;
 }
+/* フッター */
+footer p{
+  font-weight: thin;
+  font-size: 16px;
+}
+.copyright{
+  margin-top: 120px;
+}
+
+
 
 
 .status {
