--- a/css/toppage.css
+++ b/css/toppage.css
@@ -1,18 +1,60 @@
 /*ヘッダー適応のcss*/
+.logo{
+  margin-top: 24px;
+  margin-left: 24px;
+  margin-bottom: 40px;
+}
+.status-logo{
+  width: 40px;
+  background-color: #7BDCB5;
+}
+.status {
+  display: block;
+  width: 100%;
+  /* アイコンのスペースを確保したpadding-leftを設定する*/
+  padding: 0px 16px 0px 40px;
+  background-color: #B8D4D1;
+  /* 左から16pxの上下中央に背景画像を配置*/
+  background-position: left 16px center;
+  background-repeat: no-repeat;
+  background-size: 32px 32px;
+  /* 折り返しの対応*/
+  overflow-wrap: break-word;
+  background-image: url(/img/conditions_FILL0_wght400_GRAD0_opsz48.png);
+  border-radius: 8%;
+  box-shadow: 2px 2px 2px 2px #bbb;
+}
+span{
+  font-size: 32px;
+}
+.head{
+  display: flex;
+  align-items: center;
+  justify-content: space-between
+}
 .header{
   height: 240px;
+  display: flex;
+  justify-content: center;
+}
+header{
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 24px 40px;
+  background-color: #eee;
+  position: sticky;
+  box-shadow: 2px 2px 2px 2px #bbb;
+}
+button{
+  display: flex;
+  text-align: center;
+  margin-right: 16px;
 }
 
-
-* {
-  margin: 0;
-  padding: 0;
-}
-
-main {
-  background: #D9D9D9;;
-
-}
 
 /* links */
 
