--- a/css/status.css
+++ b/css/status.css
@@ -19,7 +19,7 @@
   width: 100%;
   /* アイコンのスペースを確保したpadding-leftを設定する*/
   padding: 0px 16px 0px 40px;
-  background-color: #B8D4D1;
+  background-color: #F7F9FB;
   /* 左から16pxの上下中央に背景画像を配置*/
   background-position: left 16px center;
   background-repeat: no-repeat;
@@ -51,9 +51,12 @@ header{
   width: 100%;
   box-sizing: border-box;
   padding: 24px 40px;
-  background-color: #eee;
+  background-color: #EDEAE5;
   position: sticky;
   box-shadow: 2px 2px 2px 2px #bbb;
+}
+nav {
+  background: #EDEAE5;
 }
 button{
   display: flex;
@@ -65,7 +68,6 @@ h2,
 p {
   text-align: center;
   padding: 20px;
-  font-family: 'Inter';
   font-style: normal;
   font-weight: 700;
   font-size: 24px;
@@ -134,7 +136,7 @@ footer p{
   /* width: 100%; */
   /* height: 100%; */
   display: inline-block;
-  border: 2px solid #8cbfe2;
+  border: 2px solid #F09B09;
   border-radius: 5px;
   padding: 1rem;
   cursor: pointer;
@@ -144,15 +146,17 @@ footer p{
 }
 
 .radio_tile_label::before {
-  content: url("../img/check_v.png");
-  mix-blend-mode: difference; 
+  content: url("../img/task.png");
+}
+.radio_tile_label::before {
+  /* content: url("../img/check_v.png"); */
 }
 .radio_button:checked+.radio_tile .radio_tile_label::before {
-  mix-blend-mode: normal;
+  content: url("../img/check_v.png");
 }
 .radio_button:checked+.radio_tile .radio_tile_label {
-  background-color: #3990e6;
-  border: 2px solid #3990e6;
+  background-color: #FCE181;
+  border: 2px solid #FCE181;
   color: white;
   transform: scale(1.1, 1.1);
 }
