--- a/css/survey.css
+++ b/css/survey.css
@@ -49,7 +49,7 @@ h2 span {
   width: 100%;
   /* アイコンのスペースを確保したpadding-leftを設定する*/
   padding: 0px 16px 0px 40px;
-  background-color: #B8D4D1;
+  background-color: #F7F9FB;
   /* 左から16pxの上下中央に背景画像を配置*/
   background-position: left 16px center;
   background-repeat: no-repeat;
@@ -81,7 +81,7 @@ header{
   width: 100%;
   box-sizing: border-box;
   padding: 24px 40px;
-  background-color: #eee;
+  background-color: #bbb3a5;
   position: sticky;
   box-shadow: 2px 2px 2px 2px #bbb;
 }
@@ -91,11 +91,13 @@ button{
   margin-right: 60px;
   border: none;
 }
+nav {
+  background: #bbb3a5;
+}
 h2,
 p {
   text-align: center;
   padding: 20px;
-  font-family: 'Inter';
   font-style: normal;
   font-weight: 700;
   font-size: 24px;
@@ -141,7 +143,7 @@ footer p{
 }
 
 .survey_title_icon {
-  background: #b6c9f3;
+  background: #9FEDD7;
   width: 30%;
 }
 
@@ -164,6 +166,16 @@ footer p{
   align-items: center;
 }
 
+.survey_title_icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.survey_icon {
+  width: 80%;
+}
+
 .survey_wrapper {
   width: 60%;
 }
@@ -178,7 +190,7 @@ footer p{
 }
 
 .survey_label {
-  background: #b6c9f3;
+  background: #9FEDD7;
   width: 30%;
   display: flex;
   justify-content: center;
@@ -234,7 +246,7 @@ ul.ks-cboxtags li {
 
 ul.ks-cboxtags li label {
   display: inline-block;
-  background-color: rgba(255, 255, 255, .9);
+  background-color: #F7F9FB;
   border: 2px solid rgba(139, 139, 139, .3);
   color: #adadad;
   border-radius: 25px;
@@ -284,7 +296,7 @@ ul.ks-cboxtags li input[type="checkbox"]:checked+label::before {
 
 ul.ks-cboxtags li input[type="checkbox"]:checked+label {
   border: 2px solid #025d8e;
-  background-color: #deeafc;
+  background-color: #F7F9FB;
   color: #025d8e;
   transition: all .2s;
 }
