--- a/css/survey.css
+++ b/css/survey.css
@@ -272,9 +272,9 @@ ul.ks-cboxtags li label::before {
 }
 
 ul.ks-cboxtags li input[type="checkbox"]:checked+label::before {
-  /* content: url("../img/check_v.png"); */
-  content: "";
-  background: url("../img/check_v.png") no-repeat;
+  content: url("../img/check_v.png");
+  /* content: ""; */
+  /* background: url("../img/check_v.png") no-repeat; */
   background-size: contain;
   width: 14px;
   height: 8px;
@@ -306,7 +306,7 @@ ul.ks-cboxtags li input[type="checkbox"]:focus+label {
 .modal_wrapper {
   display: none;
   position: fixed;
-  z-index: 10;
+  z-index: 1000;
   justify-content: center;
   align-items: center;
   inset: 0;
