--- a/css/club.css
+++ b/css/club.css
@@ -45,24 +45,29 @@
     width: 100%;
 }
 
+.club_title_container {
+    display: flex;
+    justify-content: center;
+}
+
 .club_itiran {
     background-color: #7BDCB5;
-    width: 13%;
-    border-radius: 20px;
+    width: 25%;
+    border-radius:5px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    margin-left: 35%;
+    margin-top: 20px;
 }
 
 .itiran {
     font-style: normal;
-    font-weight: 700;
+    font-weight: 400;
     font-size: 20px;
     line-height: 29px;
     display: flex;
     align-items: center;
     text-align: center;
-    padding: 10%;
-    padding-left: 25%;
+    padding: 5% 10%;
+    justify-content: center;
 }
 
 /*バスケ*/
@@ -71,6 +76,15 @@
     width: 880px;
     /* height: 320px; */
     padding: 20px;
+    display: flex;
+    align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+    .pro{
+        width:fit-content;
+        height: 100%;
+    }
 }
 
 section {
@@ -81,22 +95,96 @@ section {
 }
 
 .club_basket {
-    width: 40%;
-    /* height: 320px; */
+    width: 70%;
+    height: 100%;
     left: 26px;
     top: 39px;
     display: flex;
+    border-radius: 20px;
+    overflow: hidden;
+}
 
+@media screen and (max-width: 768px) {
+
+    .club_basket {
+        width: 50%;
+        background-color: antiquewhite;
+        display: block;
+        border-radius: 20px;
+        overflow: hidden;
+        height: 100%;
+    }
+}
+
+.club_img_container {
+    display: flex;
+    align-items: center;
 }
 
 .club_img {
-    background-color: #EDEDED;
-    width: 350px;
+    background-color: #ebe8ca;
+    /* width: 350px; */
+    /*  width: 30%;
+  height: 30%; */
+    width: 100%;
 }
+
+@media screen and (max-width: 768px) {
+
+    .club_img {
+        height: 20%;
+    }
+}
+
+/* .club_img::before{
+    content: "";
+    padding-top: 100%;
+    display: block;
+} */
+
+.club_img img {
+    width: 100%;
+    object-fit: cover;
+    display: flex;
+    
+
+}
+
+@media screen and (max-width: 768px) {
+    .club_img img {
+        width: 100%;
+        object-fit: cover;
+        max-height: 250px;
+    }
+}
+
+.club_img_container{
+  width: 100%;
+  background-color: bisque;
+}
+
+@media screen and (max-width: 768px) {
+    .club_img_container{
+        display: flex;
+        justify-content: center;
+      
+    }
+}
+
+
 
 .club_1 {
     display: flex;
-    gap: 150px;
+    /* gap: 150px; */
+    justify-content: center;
+    gap: 30px;
+}
+
+@media screen and (max-width: 768px) {
+    .club_1 {
+        display: block;
+        text-align: center;
+    }
 }
 
 .club_2 {
@@ -107,10 +195,23 @@ section {
     display: flex;
     align-items: center;
     text-align: center;
-    padding-left: 80px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    justify-content: center;
 }
+
+.club_member {
+    display: flex;
+    justify-content: center;
+    gap: 5%;
+    padding-bottom: 15px;
+}
+
+.club_member img {
+    width: 10%;
+    border-radius: 50%;
+}
+
 
 .de {
     font-style: normal;
@@ -122,29 +223,52 @@ section {
 
 .name {
     font-style: normal;
-    font-weight: 700;
-    font-size: 15px;
+    font-weight: 1000;
+    font-size: 25px;
     line-height: 29px;
     display: flex;
     align-items: center;
-    text-align: center;
-    padding-left: 40px;
+    justify-content: center;
 }
 
+@media screen and (max-width:768px) {
+    .name {
+        margin-bottom: 10px;
+    }
+}
+
+.club_button_container {
+    display: flex;
+    justify-content: center;
+}
 
 .club_button {
     font-style: normal;
     font-weight: 700;
     font-size: 13px;
     line-height: 19px;
-    display: flex;
-    padding: 5%;
+    /*     display: flex; */
+    padding: 10px;
     background-color: #d9d9d9;
-    width: 40%;
+    /* width: 40%; */
     justify-content: center;
     border-radius: 30px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+@media screen and (max-width: 768px){
+    .club_button {
+        font-size: 14px;
+    }
+}
+
+.club_button:hover{
+    color: #27acd9;
+    background: #fff;
+    
 }
 
 /*自炊*/
