全ページにtoppageに戻るを実装

--- a/css/common.css
+++ b/css/common.css
@@ -42,3 +42,33 @@ input::-webkit-input-placeholder, textarea::-webkit-input-placeholder { color: #
 
 /*noScript*/
 .noScript{margin:10px;text-align:center;background:#adb9c4;color:#fff;display:block; height:40px;line-height:40px}
+
+/*実質フッターcss*/
+.go-top{
+ float: right;
+ display: flex;
+ display: inline;
+ justify-content: center;
+ padding: 4px 24px;
+ border-radius: 20px;
+ background-color: #b6c9f3;
+ border: none;
+ color: white;
+ margin-top: 16px;
+ margin-right: 16px;
+ box-shadow: 1px 1px 1px 1px#bbb;
+}
+.go-top a{
+ color: white;
+}
+footer p{
+ font-weight: thin;
+ font-size: 16px;
+ margin-bottom: 16px;
+}
+.copyright{
+ display: inline;
+ display: flex;
+ justify-content: center;
+ margin-top: 16px;
+}
