toppage デザイン　完了

--- a/css/toppage.css
+++ b/css/toppage.css
@@ -6,21 +6,23 @@
 }
 
 /*ヘッダー適応のcss*/
-.logo{
+.logo {
   margin-top: 24px;
   margin-left: 24px;
   margin-bottom: 40px;
 }
-.status-logo{
+
+.status-logo {
   width: 40px;
   background-color: #7BDCB5;
 }
+
 .status {
   display: block;
   width: 100%;
   /* アイコンのスペースを確保したpadding-leftを設定する*/
   padding: 0px 16px 0px 40px;
-  background-color: #B8D4D1;
+  background-color: #fff;
   /* 左から16pxの上下中央に背景画像を配置*/
   background-position: left 16px center;
   background-repeat: no-repeat;
@@ -31,45 +33,46 @@
   border-radius: 20px;
   box-shadow: 2px 2px 2px 2px #bbb;
 }
-span{
+
+span {
   font-size: 32px;
 }
-.head{
+
+.head {
   display: flex;
   align-items: center;
   justify-content: space-between
 }
-.header{
+
+.header {
   height: 240px;
   display: flex;
   justify-content: center;
 }
-header{
+
+header {
   position: fixed;
   z-index: 999;
   top: 0;
   left: 0;
   width: 100%;
   box-sizing: border-box;
-  background-color: #eee;
+  background-color: #fff;
   position: sticky;
   box-shadow: 2px 2px 2px 2px #bbb;
 }
-button{
+
+button {
   display: flex;
   text-align: center;
   margin-right: 16px;
 }
 
-a p{
+a p {
   margin-top: 16px;
   margin-bottom: 16px;
 }
 
-
-main {
-  background: #D9D9D9;
-}
 
 
 /* links */
@@ -99,14 +102,14 @@ main {
 }
 
 
-.btn_text::before{
+.btn_text::before {
   /* font-family: "material-symbols-outlined"; */
   content: e5e1;
 }
 
 .btn_01 {
   margin: 0px 30px 20px 30px;
-  background: #b6c9f3;
+  background: #b3d4fc;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   font-style: normal;
   font-weight: 700;
@@ -114,12 +117,12 @@ main {
   /* line-height: 29px;*/
   /* align-items: center; */
   text-align: center;
-  color: #000000;
+  color: #fff;
   padding: 20px;
   white-space: nowrap;
   display: inline-block;
   width: 30%;
-  border-radius: 20px;
+  border-radius: 50px;
 }
 
 .btn_01 span {
@@ -255,7 +258,7 @@ main {
 /*========= レイアウトのためのCSS ===============*/
 
 body {
-  background: #eee;
+  background: #FCFFE7;
 }
 
 h2,
@@ -272,9 +275,18 @@ p {
 }
 
 h2 span {
-  background-color: #deeafc;
+  background-color: #FCFFE7;
   padding: 20px;
   border-radius: 20px;
+  color: #2B3467;
+  border: 4px solid #2B3467;
+  font-size: 40px;
+}
+
+@media screen and (max-width: 768px) {
+  h2 span, .btn_01 span{
+    font-size: 28px;
+  }
 }
 
 ul {
@@ -311,7 +323,8 @@ a:active {
 .cp_container {
   display: flex;
   width: 85%;
-
+  border-radius: 20px;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 768px) {
@@ -329,6 +342,10 @@ a:active {
   display: flex;
   align-items: center;
   background: #EDEDED;
+}
+
+.club_intro {
+  margin-top: 80px;
 }
 
 .cp_container img {
@@ -415,31 +432,34 @@ a:active {
 }
 
 /*実質フッターcss*/
-.go-top{
+.go-top {
   float: right;
-  display: flex;
-  display: inline;
+  display: none;
+  /* display: flex; */
   justify-content: center;
   padding: 4px 24px;
   border-radius: 20px;
   background-color: #b6c9f3;
   border: none;
   color: white;
-  margin-top: 16px;
-  margin-right: 16px;
+  margin-top: 35px;
+  margin-right: 35px;
   box-shadow: 1px 1px 1px 1px#bbb;
 }
-.go-top a{
+
+.go-top a {
   color: white;
 }
-footer p{
+
+footer p {
   font-weight: thin;
   font-size: 16px;
   margin-bottom: 16px;
 }
-.copyright{
+
+.copyright {
   display: inline;
   display: flex;
   justify-content: center;
-  margin-top: 16px;
+  margin-top: 70px;
 }
