--- a/css/club.css
+++ b/css/club.css
@@ -8,9 +8,7 @@
 /*　ヘッダー*/
 /*ヘッダー適応のcss*/
 .logo {
-    margin-top: 24px;
     margin-left: 24px;
-    margin-bottom: 40px;
 }
 
 .status-logo {
@@ -22,7 +20,7 @@
     display: block;
     /* アイコンのスペースを確保したpadding-leftを設定する*/
     padding: 0px 16px 0px 40px;
-    background-color: #B8D4D1;
+    background-color: #ffffff;
     /* 左から16pxの上下中央に背景画像を配置*/
     background-position: left 16px center;
     background-repeat: no-repeat;
@@ -57,7 +55,7 @@ header {
     left: 0;
     width: 100%;
     box-sizing: border-box;
-    background-color: #eee;
+    background-color: #ffffff;
     position: sticky;
     box-shadow: 2px 2px 2px 2px #bbb;
 }
@@ -111,10 +109,13 @@ a p {
     line-height: 150%;
 }
 
+nav{
+    background-color: #ffffff;
+}
 
 /* メイン全体 */
 .main {
-    background-color: #d9d9d9;
+    background-color: #FCFFE7;
     width: 100%;
 }
 
@@ -124,17 +125,35 @@ a p {
     margin-bottom: 80px;
 }
 
+@media screen and (max-width: 768px) {
+    .club_title_container{
+        display: flex;
+    justify-content: center;
+    margin-bottom: 25px;
+    }
+}
+
 .club_itiran {
-    background-color: #7BDCB5;
+    background-color: #BAD7E9;
     width: 25%;
-    border-radius: px;
+    border-radius: 20px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    margin-top: 20px;
+    margin-top: 60px;
+}
+
+@media screen and (max-width: 768px) {
+    .club_itiran{
+        background-color: #BAD7E9;
+    width: 25%;
+    border-radius: 20px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin-top: 30px;
+    }
 }
 
 .itiran {
     font-style: normal;
-    font-weight: 400;
+    font-weight: 500;
     font-size: 20px;
     line-height: 29px;
     display: flex;
@@ -324,7 +343,7 @@ section {
     line-height: 19px;
     /*     display: flex; */
     padding: 10px;
-    background-color: #d9d9d9;
+    background-color: #BAD7E9;
     /* width: 40%; */
     justify-content: center;
     border-radius: 30px;
@@ -341,8 +360,8 @@ section {
 }
 
 .club_button:hover {
-    color: #27acd9;
-    background: #fff;
+    color: #2B3467;
+    background: #ffffff;
 
 }
 
@@ -356,14 +375,34 @@ section {
 footer{
     display: flex;
     justify-content: center;
+    background-color: #ffffff;
+}
+
+.go-top{
+    display: flex;
+    justify-content: center;
+    margin-top: 25px;
+    padding: 4px 24px;
+    border-radius: 20px;
+    background-color: #FCFFE7;
+    border: none;
+    color: white;
+    box-shadow: 1px 1px 1px 1px#bbb;
 }
 
 footer p {
     font-weight: thin;
     font-size: 16px;
     margin-bottom: 16px;
+    font-style: normal;
+    font-weight: 700;
 }
 
-.copyright {
-    margin-top: 16px;
+.button_top{
+    display: flex;
+    justify-content: center;
 }
+
+/* .copyright {
+    margin-top: 16px;
+} */
