--- a/css/survey.css
+++ b/css/survey.css
@@ -119,9 +119,9 @@ footer p {
   font-size: 16px;
 }
 
-.copyright {
-  margin-top: 120px;
-}
+/* .copyright {
+  margin-top: px;
+} */
 
 
 
@@ -234,7 +234,7 @@ footer p {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 80px;
+  margin-bottom: 40px;
 }
 
 .submit {
